# PDDIKTI-kemdikbud-API

./: .gitignore  .travis.yml  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TESTING.md  app.py  coba.py  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.py  setup.py  testimage.py  testing.py  travis.yml
documentation/: API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TESTING.md
pddiktipy/: __init__.py  api.py  exceptions.py  helper.py  testkey.py
tests/: __init__.py  conftest.py  test_api_complete.py  test_api_final.py  test_comprehensive.py  test_data.py  test_fix_verification.py
